# cython-cmake-example

./: .gitignore  README.md
PythonPlugins/: hello.py
src/: CMakeLists.txt  main.cpp
src/MathFunctions/: CMakeLists.txt  MathFunctions.cxx
src/PythonFunctions/: CMakeLists.txt  Playground.pyx
